@@ -19,9 +19,69 @@ import rasterio.warp
 
 warnings.simplefilter('default')
 
+
 def configure_logging(verbosity):
     log_level = max(10, 30 - 10*verbosity)
     logging.basicConfig(stream=sys.stderr, level=log_level)
+
+
+def coords(obj):
+    """Yield all coordinate coordinate tuples from a geometry or feature.
+    From python-geojson package."""
+    if isinstance(obj, (tuple, list)):
+        coordinates = obj
+    elif 'geometry' in obj:
+        coordinates = obj['geometry']['coordinates']
+    else:
+        coordinates = obj.get('coordinates', obj)
+    for e in coordinates:
+        if isinstance(e, (float, int)):
+            yield tuple(coordinates)
+            break
+        else:
+            for f in coords(e):
+                yield f
+
+
+def write_features(file, collection,
+        agg_mode='obj', expression='feature', use_rs=False,
+        **dump_kwds):
+    """Read an iterator of (feat, bbox) pairs and write to file using
+    the selected modes."""
+    # Sequence of features expressed as bbox, feature, or collection.
+    if agg_mode == 'seq':
+        for feat in collection():
+            xs, ys = zip(*coords(feat))
+            bbox = (min(xs), min(ys), max(xs), max(ys))
+            if use_rs:
+                file.write(u'\u001e')
+            if expression == 'feature':
+                file.write(json.dumps(feat, **dump_kwds))
+            elif expression == 'bbox':
+                file.write(json.dumps(bbox, **dump_kwds))
+            else:
+                file.write(
+                    json.dumps({
+                        'type': 'FeatureCollection',
+                        'bbox': bbox,
+                        'features': [feat]}, **dump_kwds))
+            file.write('\n')
+    # Aggregate all features into a single object expressed as 
+    # bbox or collection.
+    else:
+        features = list(collection())
+        if expression == 'bbox':
+            file.write(json.dumps(collection.bbox, **dump_kwds))
+        elif expression == 'feature':
+            file.write(json.dumps(features[0], **dump_kwds))
+        else:
+            file.write(json.dumps({
+                'bbox': collection.bbox,
+                'type': 'FeatureCollection', 
+                'features': features},
+                **dump_kwds))
+            file.write('\n')
+
 
 # The CLI command group.
 @click.group(help="Rasterio command line interface.")
@@ -90,17 +150,23 @@ def insp(ctx, src_path, mode):
         sys.exit(1)
 
 # Bounds command.
-@cli.command(short_help="Write bounding boxes to stdout as GeoJSON.",
-    help="""
-Write bounding boxes to stdout as GeoJSON for use with, e.g., geojsonio
+@cli.command(short_help="Write bounding boxes to stdout as GeoJSON.")
 
-  $ rio bounds *.tif | geojsonio
-""")
-@click.argument('src_paths', nargs=-1, type=click.Path(exists=True))
+# One or more files, the bounds of each are a feature in the collection
+# object or feature sequence.
+@click.argument('input', nargs=-1, type=click.Path(exists=True))
+
+# Coordinate precision option.
 @click.option('--precision', type=int, default=-1,
               help="Decimal precision of coordinates.")
+
+# JSON formatting options.
 @click.option('--indent', default=None, type=int,
               help="Indentation level for JSON output")
+@click.option('--compact/--no-compact', default=False,
+              help="Use compact separators (',', ':').")
+
+# Geographic (default) or Mercator switch.
 @click.option('--geographic', 'projected', flag_value='geographic',
               default=True,
               help="Output in geographic coordinates (the default).")
@@ -108,22 +174,62 @@ Write bounding boxes to stdout as GeoJSON for use with, e.g., geojsonio
               help="Output in projected coordinates.")
 @click.option('--mercator', 'projected', flag_value='mercator',
               help="Output in Web Mercator coordinates.")
+
+# JSON object (default) or sequence (experimental) switch.
+@click.option('--json-obj', 'json_mode', flag_value='obj', default=True,
+        help="Write a single JSON object (the default).")
+@click.option('--x-json-seq', 'json_mode', flag_value='seq',
+        help="Write a JSON sequence. Experimental.")
+
+# Use ASCII RS control code to signal a sequence item (False is default).
+# See http://tools.ietf.org/html/draft-ietf-json-text-sequence-05.
+# Experimental.
+@click.option('--x-json-seq-rs/--x-json-seq-no-rs', default=False,
+        help="Use RS as text separator. Experimental.")
+
+# GeoJSON feature (default), bbox, or collection switch. Meaningful only
+# when --x-json-seq is used.
 @click.option('--collection', 'output_mode', flag_value='collection',
               default=True,
               help="Output as a GeoJSON feature collection (the default).")
+@click.option('--feature', 'output_mode', flag_value='feature',
+              help="Output as sequence of GeoJSON features.")
 @click.option('--bbox', 'output_mode', flag_value='bbox',
               help="Output as a GeoJSON bounding box array.")
+
 @click.pass_context
-def bounds(ctx, src_paths, precision, indent, projected, output_mode):
+
+def bounds(ctx, input, precision, indent, compact, projected, json_mode,
+        x_json_seq_rs, output_mode):
+
+    """Write bounding boxes to stdout as GeoJSON for use with, e.g.,
+    geojsonio
+
+    $ rio bounds *.tif | geojsonio
+
+    """
     verbosity = ctx.obj['verbosity']
     logger = logging.getLogger('rio')
-    try:
-        collection = {'type': 'FeatureCollection'}
-        features = []
-        col_xs = []
-        col_ys = []
-        with rasterio.drivers(CPL_DEBUG=verbosity>2):
-            for i, path in enumerate(src_paths):
+    dump_kwds = {'sort_keys': True}
+    if indent:
+        dump_kwds['indent'] = indent
+    if compact:
+        dump_kwds['separators'] = (',', ':')
+    stdout = click.get_text_stream('stdout')
+
+    # This is the generator for (feature, bbox) pairs.
+    class Collection(object):
+
+        def __init__(self):
+            self._xs = []
+            self._ys = []
+
+        @property
+        def bbox(self):
+            return min(self._xs), min(self._ys), max(self._xs), max(self._ys)
+
+        def __call__(self):
+            for i, path in enumerate(input):
                 with rasterio.open(path) as src:
                     bounds = src.bounds
                     xs = [bounds[0], bounds[2]]
@@ -134,28 +240,43 @@ def bounds(ctx, src_paths, precision, indent, projected, output_mode):
                     if projected == 'mercator':
                         xs, ys = rasterio.warp.transform(
                             src.crs, {'init': 'epsg:3857'}, xs, ys)
-                    if precision >= 0:
-                        xs = [round(v, precision) for v in xs]
-                        ys = [round(v, precision) for v in ys]
-                    col_xs.extend(xs)
-                    col_ys.extend(ys)
-                    features.append(
-                        {'type': 'Feature', 'geometry':
-                            {'type': 'Polygon', 'coordinates': [
-                                [[xs[0], ys[0]], [xs[1], ys[0]], [xs[1], ys[1]],
-                                 [xs[0], ys[1]], [xs[0], ys[0]] ]]},
-                        'properties': {'id': str(i), 'title': path} })
-        collection['bbox'] = [
-            min(col_xs), min(col_ys), max(col_xs), max(col_ys)]
-        if output_mode == 'bbox':
-            click.echo(json.dumps(collection['bbox']))
-        else:
-            collection['features'] = features
-            click.echo(json.dumps(collection, indent=indent, sort_keys=True))
+                if precision >= 0:
+                    xs = [round(v, precision) for v in xs]
+                    ys = [round(v, precision) for v in ys]
+                bbox = [min(xs), min(ys), max(xs), max(ys)]
+                
+                yield {
+                    'type': 'Feature',
+                    'bbox': bbox,
+                    'geometry': {
+                        'type': 'Polygon',
+                        'coordinates': [[
+                            [xs[0], ys[0]],
+                            [xs[1], ys[0]],
+                            [xs[1], ys[1]],
+                            [xs[0], ys[1]],
+                            [xs[0], ys[0]] ]]},
+                    'properties': {
+                        'id': str(i), 'title': path} }
+
+                self._xs.extend(bbox[::2])
+                self._ys.extend(bbox[1::2])
+
+    collection = Collection()
+
+    # Use the generator defined above as input to the generic output 
+    # writing function.
+    try:
+        with rasterio.drivers(CPL_DEBUG=verbosity>2):
+            write_features(
+                stdout, collection, agg_mode=json_mode,
+                expression=output_mode, use_rs=x_json_seq_rs,
+                **dump_kwds)
         sys.exit(0)
     except Exception:
         logger.exception("Failed. Exception caught")
         sys.exit(1)
+
 
 def transform_geom(transformer, g, precision=-1):
     if g['type'] == 'Point':
@@ -194,80 +315,126 @@ def transform_geom(transformer, g, precision=-1):
     g['coordinates'] = new_coords
     return g
 
+
 # Shapes command.
 @cli.command(short_help="Write the shapes of features.")
-@click.argument('src_path', type=click.Path(exists=True))
+
+@click.argument('input', type=click.Path(exists=True))
+
+# Coordinate precision option.
 @click.option('--precision', type=int, default=-1,
               help="Decimal precision of coordinates.")
+
+# JSON formatting options.
 @click.option('--indent', default=None, type=int,
               help="Indentation level for JSON output")
-@click.option('--projected/--geographic', default=False,
-              help="Output in projected coordinates (default is geographic).")
-@click.option('--x-json-seq/--x-json-obj', default=False,
-              help="Write a JSON sequence (default is object). Requires specification of text separator. Experimental.")
-@click.option('--x-text-sep-lf', 'text_sep', flag_value='\n',
-              help="Use LF as text separator. Experimental.")
+@click.option('--compact/--no-compact', default=False,
+              help="Use compact separators (',', ':').")
+
+# Geographic (default) or Mercator switch.
+@click.option('--geographic', 'projected', flag_value='geographic',
+              default=True,
+              help="Output in geographic coordinates (the default).")
+@click.option('--projected', 'projected', flag_value='projected',
+              help="Output in projected coordinates.")
+
+# JSON object (default) or sequence (experimental) switch.
+@click.option('--json-obj', 'json_mode', flag_value='obj', default=True,
+        help="Write a single JSON object (the default).")
+@click.option('--x-json-seq', 'json_mode', flag_value='seq',
+        help="Write a JSON sequence. Experimental.")
+
+# Use ASCII RS control code to signal a sequence item (False is default).
+# See http://tools.ietf.org/html/draft-ietf-json-text-sequence-05.
+# Experimental.
+@click.option('--x-json-seq-rs/--x-json-seq-no-rs', default=False,
+        help="Use RS as text separator. Experimental.")
+
+# GeoJSON feature (default), bbox, or collection switch. Meaningful only
+# when --x-json-seq is used.
+@click.option('--collection', 'output_mode', flag_value='collection',
+              default=True,
+              help="Output as a GeoJSON feature collection (the default).")
+@click.option('--feature', 'output_mode', flag_value='feature',
+              help="Output as sequence of GeoJSON features.")
+@click.option('--bbox', 'output_mode', flag_value='bbox',
+              help="Output as a GeoJSON bounding box array.")
+
 @click.pass_context
+
 def shapes(
-        ctx, src_path, precision, indent, projected, x_json_seq, text_sep=None):
+        ctx, input, precision, indent, compact, projected, json_mode,
+        x_json_seq_rs, output_mode):
+
+    """Writes features of a dataset out as GeoJSON. It's intended for
+    use with single-band rasters and reads from the first band.
+    """
+
     verbosity = ctx.obj['verbosity']
     logger = logging.getLogger('rio')
-    def to_feature(i, geom):
-        return {
-            'type': 'Feature',
-            'id': str(i),
-            'properties': {'val': i},
-            'geometry': geom }
-    try:
-        collection = {'type': 'FeatureCollection'}
-        with rasterio.drivers(CPL_DEBUG=verbosity>2):
-            with rasterio.open(src_path) as src:
+    dump_kwds = {'sort_keys': True}
+    if indent:
+        dump_kwds['indent'] = indent
+    if compact:
+        dump_kwds['separators'] = (',', ':')
+    stdout = click.get_text_stream('stdout')
+
+    # This is the generator for (feature, bbox) pairs.
+    class Collection(object):
+
+        def __init__(self):
+            self._xs = []
+            self._ys = []
+
+        @property
+        def bbox(self):
+            return min(self._xs), min(self._ys), max(self._xs), max(self._ys)
+
+        def __call__(self):
+            with rasterio.open(input) as src:
                 bounds = src.bounds
                 xs = [bounds[0], bounds[2]]
                 ys = [bounds[1], bounds[3]]
-                if not projected:
+                if projected == 'geographic':
                     xs, ys = rasterio.warp.transform(
                         src.crs, {'init': 'epsg:4326'}, xs, ys)
                 if precision >= 0:
                     xs = [round(v, precision) for v in xs]
                     ys = [round(v, precision) for v in ys]
-                collection['bbox'] = (min(xs), min(ys), max(xs), max(ys))
-                if not projected:
-                    transformer = functools.partial(
-                        rasterio.warp.transform,
-                        src.crs,
-                        {'init': 'epsg:4326'})
-                    feature_gen = (to_feature(i,
-                                    transform_geom(
-                                        transformer, g, precision)) for g, i
-                                in rasterio.features.shapes(
-                                    src.read(1), transform=src.affine))
-                else:
-                    feature_gen = (to_feature(i, g) for g, i
-                                in rasterio.features.shapes(
-                                    src.read(1), transform=src.affine))
-                if x_json_seq:
-                    if text_sep is None:
-                        raise click.BadParameter('Text separator is required')
-                    sys.stdout.write(
-                        json.dumps(collection, indent=indent, sort_keys=True)
-                        + text_sep)
-                    for feature in feature_gen:
-                        sys.stdout.write(
-                            json.dumps(feature, indent=indent, sort_keys=True)
-                        + text_sep)
-                    sys.stdout.flush()
-                else:
-                    collection['features'] = list(feature_gen)
-                    sys.stdout.write(
-                        json.dumps(collection, indent=indent, sort_keys=True))
-        sys.exit(0)
-    except IOError:
-        logger.info("IOError caught")
+                self._xs = xs
+                self._ys = ys
+
+                # To be used in the geographic case below.
+                transformer = functools.partial(
+                                rasterio.warp.transform,
+                                src.crs,
+                                {'init': 'epsg:4326'})
+                
+                for g, i in rasterio.features.shapes(
+                                src.read(1), transform=src.affine):
+                    if projected == 'geographic':
+                        g = transform_geom(transformer, g, precision)
+                    yield {
+                        'type': 'Feature',
+                        'id': str(i),
+                        'properties': {'val': i},
+                        'geometry': g }
+
+    collection = Collection()
+
+    # Use the generator defined above as input to the generic output 
+    # writing function.
+    try:
+        with rasterio.drivers(CPL_DEBUG=verbosity>2):
+            write_features(
+                stdout, collection, agg_mode=json_mode,
+                expression=output_mode, use_rs=x_json_seq_rs,
+                **dump_kwds)
         sys.exit(0)
     except Exception:
         logger.exception("Failed. Exception caught")
         sys.exit(1)
+
 
 # Transform command.
 @cli.command(short_help="Transform coordinates.")
